--- a/mcu/esp32-devkit/platformio.ini
+++ b/mcu/esp32-devkit/platformio.ini
@@ -5,12 +5,12 @@ default_envs = esp32doit-devkit-v1
 
 [env]
 framework = arduino
-upload_port = /dev/ttyUSB1
-monitor_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@6.13.0
 board = esp32doit-devkit-v1
 framework = arduino
 board_build.mcu = esp32
@@ -25,7 +25,5 @@ board_build.partitions = partitions.csv
 build_flags = 
     -DARDUINO_ESP32_DEV
 monitor_filters = esp32_exception_decoder
-lib_deps =
-    knolleary/PubSubClient @ ^2.8
-    waspinator/AccelStepper @ ^1.64
+
 extra_scripts = pre:../env_script.py
